--- a/T1/package.json
+++ b/T1/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "test.js",
   "scripts": {
+    "build": "./build.sh",
     "submit-test": "node test.js"
   },
   "type": "module",
