[feat]: declare structs in T2
Co-authored-by: antuadhikari <antuadhikari@users.noreply.github.com>

--- a/T2/package.json
+++ b/T2/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "test.js",
   "scripts": {
+    "build": "tinygo build -o main.wasm -target wasm ./main.go",
     "submit-test": "node test.js"
   },
   "type": "module",
