[fix]: Fix board bugs

--- a/T3/package.json
+++ b/T3/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "./build.sh",
     "build-windows": ".\\build.ps1",
+    "dev": "./watch.sh",
+    "test": "node debug.js",
     "submit-test": "node test.js"
   },
   "type": "module",
